--- a/catalog-item.html
+++ b/catalog-item.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>HTML Academy: Барбершо-каталог-вещь</title>
-</head>
-<body>
-	
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>HTML Academy: Барбершоп-каталог-вещь</title>
+	</head>
+	<body>
+		
+	</body>
 </html>
