--- a/catalog.html
+++ b/catalog.html
@@ -6,46 +6,46 @@
 </head>
 <body>
 	<header class="main-header">
-		<nav class="main-navigation">
-			<a class="main-header-logo" href="mainpage.html">
-				<img src="img/index-logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
-			</a>
-			<ul class="site-navigation">
-				<li><a href="info">Информация></a></li>
-				<li><a href="news.html">Новости</a></li>
-        <li><a href="price.html">Прайс-лист</a></li>
-        <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-			</ul>
-			<ul class="user-navigation">
-				<li class="login-link">Вход</li>
-			</ul>
-		</nav>
-	</header>
-	<main class="container">
-		<h1 class="page-title">Средства для ухода</h1>
-
-		<ul class="breadcrumbs">
-			<li><a href="catalog.html">Главная</a></li>
-			<li><a href="shop.html"></a>Магазин</li>
-			<li class="breadcrumbs-current">Средства для ухода</li>
-		</ul>
-		<section class="filters">
+      <nav class="main-navigation">
+        <a class="main-header-logo" href="mainpage.html">
+          <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="price.html">Прайс-лист</a></li>
+          <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="login-link">Вход</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <h1 class="page-title">Cредства для ухода</h1>
+      
+      <ul class="breadcrumbs">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li class="breadcrumbs-current">Средства для ухода</li>
+      </ul>
+      <section class="filters">
         <h2 class="visually-hidden">Фильтр товаров</h2>
         <!-- Здесь будет форма -->
-    </section>
-
-    <section class="catalog">
-      <h2 class="visually-hidden">Список средств для ухода</h2>
+      </section>
+      
+      <section class="catalog">
+        <h2 class="visually-hidden">Список средств для ухода</h2>
         <ul class="catalog-list">
-        	<li class="catalog-item">
-        		<h3>
-        			<a href="catalog-item.html">
-        				<span class="catalog-category">Набор для путешествий</span>
+          <li class="catalog-item">
+            <h3>
+              <a href="catalog-item.html">
+                <span class="catalog-category">Набор для путешествий</span>
                 <span class="catalog-item-title">«Baxter of California»</span>
-        			</a>
-        		</h3>
-        		<p class="catalog-item-image">
+              </a>
+            </h3>
+            <p class="catalog-item-image">
               <a href="catalog-item.html">
                 <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
               </a>
@@ -54,25 +54,25 @@
               <b>2 900 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
-        	</li>
-        	<li class="catalog-item">
-        		<h3>
-        		  <a href="catalog-item.html">
-        			  <span class="catalog-item-category">Увлажняющий кондиционер</span>
-        			  <span class="catalog-item-title">«Baxter of California»</span>
-        		  </a>
-        		</h3>
-        		<p>
-        			<a href="catalog-item.html">
-        				<img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
-        			</a>
-        		</p>
-        		<p class="catalog-item-price">
-        			<b>750 ₽</b>
-        			<a class="button" href="#">Купить</a>
-        		</p>
-        	</li>
-        	<li class="catalog-item">
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="catalog-item.html">
+                <span class="catalog-category">Увлажняющий кондиционер</span>
+                <span class="catalog-item-title">«Baxter of California»</span>
+              </a>
+            </h3>
+            <p class="catalog-item-image">
+              <a href="catalog-item.html">
+                <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-price">
+              <b>750 ₽</b>
+              <a class="button" href="#">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
             <h3>
               <a href="catalog-item.html">
                 <span class="catalog-category">Гель для волос</span>
@@ -140,7 +140,7 @@
               <a class="button" href="#">Купить</a>
             </p>
           </li>
-        </ul>  
+        </ul>
         <ul class="pagination-list">
           <li class="pagination-item"><a href="#">1</a></li>
           <li class="pagination-item pagination-item-current"><a>2</a></li>
@@ -148,8 +148,8 @@
           <li class="pagination-item"><a href="#">4</a></li>
         </ul>
       </section>
-     </main>
-        <footer class="main-footer">
+    </main>
+    <footer class="main-footer">
       <p class="footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -175,6 +175,5 @@
       <!-- Здесь будет форма -->
       <span class="modal-close">x</span>
     </section>
-	</main>
 </body>
 </html>
